# fpl-mcp-adk

./: .firebaserc  .gitignore  README.md  cli_mcp_server.py  fplgif.webm  header_template.txt  requirements.txt
.gemini/: settings.json
fpl-agent/: .gcloudignore  README.md  pyproject.toml
fpl-agent/deployment/: .dockerignore  Dockerfile  deploy.py  fpl_agent-0.1-py3-none-any.whl  test_deployment.py
fpl-agent/eval/: test_eval.py
fpl-agent/eval/eval_data/: fpl_eval_cases.test.json  test_config.json
fpl-agent/fpl_agent/: __init__.py  agent.py  cli_mcp_server.py  prompts.py
fpl-agent/fpl_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fpl-agent/fpl_agent/tools/: __init__.py  fpl_tools.py
fpl-backend/: app.py  requirements.txt
fpl-mcp-server/: Dockerfile  firebase.json  setup_config.sh.example  setup_gcp_project.sh  setup_gcp_project.sh.example  test_sync.py
fpl-mcp-server/app/: __init__.py  main.py
fpl-mcp-server/app/api/: __init__.py
fpl-mcp-server/app/core/: __init__.py  config.py
fpl-mcp-server/app/crud/: __init__.py  crud_fpl.py
fpl-mcp-server/app/schemas/: __init__.py  fpl_schemas.py
fpl-mcp-server/app/services/: __init__.py  fpl_sync.py
fpl-mcp-server/deployment/: deploy.sh  setup_gcp.sh
fpl_mcp_server/: .gitignore
fpl_mcp_server/app/core/: config.py
fpl_mcp_server/app/crud/: crud_fpl.py
fpl_mcp_server/app/schemas/: fpl_schemas.py
fpl_mcp_server/app/services/: fpl_sync.py
frontend/: eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.jsx
(+7 files in other folders)
